<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <POU Name="STRAIGHTENING_PROG_1" Id="{cd480fd6-f382-46f2-bea1-6edd10bfb24b}" SpecialFunc="None">
    <Declaration><![CDATA[ PROGRAM STRAIGHTENING_PROG_1
VAR

	NEW: INT;
	FG: INT;
	ENABLE_TIMER: BOOL := FALSE;
	TMR1: TON;
	TMR2: TON;
	CNT1: CTU;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF INPUT_VAR.STRAIGHTEN_START AND INDEXING_1_VAR.I_INDEXING_1_ROTATION_DONE THEN
	ENABLE_TIMER:=TRUE;
END_IF
IF ENABLE_TIMER THEN
	INPUT_VAR.STRAIGHTEN_START:=FALSE;
	TMR1(IN:=NOT TMR2.Q,PT:=T#0.15S);
	TMR2(IN:=TMR1.Q,PT:=T#0.3S);
	IF TMR2.Q THEN
		TMR1(IN:=FALSE); 
		TMR2(IN:=FALSE);
	END_IF
	
	(*IF NOT  INDEXING_1_VAR.I_PRESS_STOPPER_DOWN  THEN
		INDEXING_1_VAR.O_PRESS_STOPPER_DOWN:=TRUE;
		INDEXING_1_VAR.O_PRESS_STOPPER_UP:=FALSE;
	END_IF*)
ELSE
		TMR1(IN:=FALSE);
		TMR2(IN:=FALSE);
END_IF

CNT1(CU:=TMR1.Q,RESET:=NOT	ENABLE_TIMER,PV:=10);
//CNT1(CU:=TMR1.Q,RESET:=NOT INPUT_VAR.STRAIGHTEN_START,PV:=11);
IF CNT1.CV >=12 THEN
	ENABLE_TIMER:=FALSE;
	INDEXING_1_VAR.STRAIGHTEN_FINISH:=TRUE;
	INDEXING_1_VAR.O_PRESS_STOPPER_DOWN:=FALSE;
	INDEXING_1_VAR.O_PRESS_STOPPER_UP:=TRUE;
END_IF

IF CNT1.CV =2 THEN
	INDEXING_1_VAR.STRAIGHTEN_FINISH:=FALSE;
END_IF

IF 	INDEXING_1_VAR.STRAIGHTEN_FINISH THEN
	IF INDEXING_1_VAR.I_PRESS_STOPPER_UP THEN
		INPUT_VAR.STRAIGHTEN_DONE :=TRUE;	
		INPUT_VAR.STRAIGHTEN_PROCESS:=FALSE;
	END_IF	
END_IF
CASE CNT1.CV OF	
//CASE INDEXING_1_VAR.INDEXING_1_CASE OF
0:	
	INDEXING_1_VAR.O_PRESS_STOPPER_DOWN:=FALSE;
	INDEXING_1_VAR.O_PRESS_STOPPER_UP:=TRUE;
	INDEXING_1_VAR.I_INDEXING_1_READY_FOR_STRAIGHTEN:=FALSE;

1: 	INDEXING_1_VAR.O_PRESS_STOPPER_DOWN:=TRUE;
	INDEXING_1_VAR.O_PRESS_STOPPER_UP:=FALSE;

2: 	INDEXING_1_VAR.O_PRESS_STOPPER_DOWN:=TRUE;
	INDEXING_1_VAR.O_PRESS_STOPPER_UP:=FALSE;
	
3: 	INDEXING_1_VAR.O_PRESS_STOPPER_DOWN:=FALSE;
	INDEXING_1_VAR.O_PRESS_STOPPER_UP:=TRUE;
	
4: 	INDEXING_1_VAR.O_PRESS_STOPPER_DOWN:=TRUE;
	INDEXING_1_VAR.O_PRESS_STOPPER_UP:=FALSE;
5:	
	INPUT_VAR.STRAIGHTEN_PROCESS:=TRUE;
	INDEXING_1_VAR.O_INDEXING_1_GRIPPER_OPEN_1:=TRUE;
	INDEXING_1_VAR.O_INDEXING_1_GRIPPER_CLOSE_1:=FALSE;
		
6:
	INDEXING_1_VAR.O_INDEXING_1_GRIPPER_EXT_UP :=TRUE;	
	INDEXING_1_VAR.O_INDEXING_1_GRIPPER_EXT_down:=FALSE;
		
7:
	INDEXING_1_VAR.O_INDEXING_1_GRIPPER_OPEN_1:=FALSE;
	INDEXING_1_VAR.O_INDEXING_1_GRIPPER_CLOSE_1:=TRUE;
	//INDEXING_1_VAR.O_PRESS_STOPPER_DOWN:=FALSE;
	//INDEXING_1_VAR.O_PRESS_STOPPER_UP:=TRUE;		
8:
	INDEXING_1_VAR.O_INDEXING_1_GRIPPER_EXT_UP :=FALSE;	
	INDEXING_1_VAR.O_INDEXING_1_GRIPPER_EXT_down:=TRUE;
	
9:	
	INDEXING_1_VAR.O_INDEXING_1_GRIPPER_OPEN_1:=TRUE;
	INDEXING_1_VAR.O_INDEXING_1_GRIPPER_CLOSE_1:=FALSE;
	//INDEXING_1_VAR.O_PRESS_STOPPER_DOWN:=TRUE;
	//INDEXING_1_VAR.O_PRESS_STOPPER_UP:=FALSE;	
10:
	INDEXING_1_VAR.O_INDEXING_1_GRIPPER_EXT_UP :=TRUE;	
	INDEXING_1_VAR.O_INDEXING_1_GRIPPER_EXT_down:=FALSE;	
11:
	INDEXING_1_VAR.O_INDEXING_1_GRIPPER_OPEN_1:=FALSE;
	INDEXING_1_VAR.O_INDEXING_1_GRIPPER_CLOSE_1:=TRUE;
			
12:
	INDEXING_1_VAR.O_INDEXING_1_GRIPPER_EXT_UP :=FALSE;	
	INDEXING_1_VAR.O_INDEXING_1_GRIPPER_EXT_down:=TRUE;
	ENABLE_TIMER:=FALSE;
	INPUT_VAR.STRAIGHTEN_START:=FALSE;
END_CASE

IF 
	INDEXING_1_VAR.O_INDEXING_1_GRIPPER_OPEN_1 AND
	INDEXING_1_VAR.I_INDEXING_1_GRIPPER_OPEN_1 AND
	INDEXING_1_VAR.I_INDEXING_1_GRIPPER_OPEN_2	AND
	INDEXING_1_VAR.I_INDEXING_1_GRIPPER_OPEN_3	AND 
	INDEXING_1_VAR.I_INDEXING_1_GRIPPER_OPEN_4	AND
	NOT INDEXING_1_VAR.I_INDEXING_1_GRIPPER_CLOSE_1	AND
	NOT INDEXING_1_VAR.I_INDEXING_1_GRIPPER_CLOSE_2	AND
	NOT INDEXING_1_VAR.I_INDEXING_1_GRIPPER_CLOSE_3	AND
	NOT INDEXING_1_VAR.I_INDEXING_1_GRIPPER_CLOSE_4 THEN
		INDEXING_1_VAR.I_ALL_GRIPPER_OPEN :=TRUE;
	END_IF

IF 
	NOT INDEXING_1_VAR.O_INDEXING_1_GRIPPER_OPEN_1 AND
	NOT INDEXING_1_VAR.I_INDEXING_1_GRIPPER_OPEN_1 AND
	NOT INDEXING_1_VAR.I_INDEXING_1_GRIPPER_OPEN_2	AND
	NOT INDEXING_1_VAR.I_INDEXING_1_GRIPPER_OPEN_3	AND 
	NOT INDEXING_1_VAR.I_INDEXING_1_GRIPPER_OPEN_4	AND
	INDEXING_1_VAR.I_INDEXING_1_GRIPPER_CLOSE_1	AND
	INDEXING_1_VAR.I_INDEXING_1_GRIPPER_CLOSE_2	AND
	INDEXING_1_VAR.I_INDEXING_1_GRIPPER_CLOSE_3	AND
	INDEXING_1_VAR.I_INDEXING_1_GRIPPER_CLOSE_4 THEN
		INDEXING_1_VAR.I_ALL_GRIPPER_OPEN :=FALSE;
END_IF


	INDEXING_1_VAR.O_INDEXING_1_GRIPPER_OPEN_2:=INDEXING_1_VAR.O_INDEXING_1_GRIPPER_OPEN_1;
	INDEXING_1_VAR.O_INDEXING_1_GRIPPER_OPEN_3:=INDEXING_1_VAR.O_INDEXING_1_GRIPPER_OPEN_1;
	INDEXING_1_VAR.O_INDEXING_1_GRIPPER_OPEN_4:=INDEXING_1_VAR.O_INDEXING_1_GRIPPER_OPEN_1;

	INDEXING_1_VAR.O_INDEXING_1_GRIPPER_CLOSE_2:=INDEXING_1_VAR.O_INDEXING_1_GRIPPER_CLOSE_1;
	INDEXING_1_VAR.O_INDEXING_1_GRIPPER_CLOSE_3:=INDEXING_1_VAR.O_INDEXING_1_GRIPPER_CLOSE_1;
	INDEXING_1_VAR.O_INDEXING_1_GRIPPER_CLOSE_4:=INDEXING_1_VAR.O_INDEXING_1_GRIPPER_CLOSE_1;	
]]></ST>
    </Implementation>
    <LineIds Name="STRAIGHTENING_PROG_1">
      <LineId Id="306" Count="1" />
      <LineId Id="305" Count="0" />
      <LineId Id="318" Count="0" />
      <LineId Id="262" Count="0" />
      <LineId Id="266" Count="0" />
      <LineId Id="268" Count="1" />
      <LineId Id="277" Count="0" />
      <LineId Id="270" Count="0" />
      <LineId Id="287" Count="4" />
      <LineId Id="271" Count="1" />
      <LineId Id="274" Count="0" />
      <LineId Id="273" Count="0" />
      <LineId Id="275" Count="0" />
      <LineId Id="281" Count="0" />
      <LineId Id="396" Count="0" />
      <LineId Id="284" Count="1" />
      <LineId Id="351" Count="0" />
      <LineId Id="374" Count="1" />
      <LineId Id="347" Count="0" />
      <LineId Id="362" Count="0" />
      <LineId Id="358" Count="1" />
      <LineId Id="361" Count="0" />
      <LineId Id="363" Count="0" />
      <LineId Id="352" Count="1" />
      <LineId Id="355" Count="2" />
      <LineId Id="354" Count="0" />
      <LineId Id="282" Count="0" />
      <LineId Id="157" Count="0" />
      <LineId Id="246" Count="3" />
      <LineId Id="386" Count="3" />
      <LineId Id="412" Count="2" />
      <LineId Id="390" Count="4" />
      <LineId Id="201" Count="0" />
      <LineId Id="308" Count="0" />
      <LineId Id="212" Count="2" />
      <LineId Id="218" Count="0" />
      <LineId Id="314" Count="2" />
      <LineId Id="223" Count="3" />
      <LineId Id="401" Count="0" />
      <LineId Id="229" Count="1" />
      <LineId Id="261" Count="0" />
      <LineId Id="237" Count="0" />
      <LineId Id="245" Count="0" />
      <LineId Id="292" Count="2" />
      <LineId Id="400" Count="0" />
      <LineId Id="295" Count="9" />
      <LineId Id="202" Count="0" />
      <LineId Id="395" Count="0" />
      <LineId Id="330" Count="0" />
      <LineId Id="158" Count="0" />
      <LineId Id="44" Count="0" />
      <LineId Id="188" Count="0" />
      <LineId Id="45" Count="8" />
      <LineId Id="189" Count="0" />
      <LineId Id="54" Count="0" />
      <LineId Id="190" Count="1" />
      <LineId Id="55" Count="10" />
      <LineId Id="72" Count="7" />
      <LineId Id="66" Count="0" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>